--- a/14-appendixB/index.qmd
+++ b/14-appendixB/index.qmd
@@ -1,13 +1,13 @@
 ---
-title: <span style="color:white">The Dream’s Blueprint</span>
-subtitle: "How mastery of the basics turned Hakeem Olajuwon into a basketball legend"
+title: <span style="color:white">The Psychology of the Perfect Shot Choice</span>
+subtitle: "What LeBron James teaches us about decision-making under pressure"
 
 author: 
 - name: "King Matayo"
   email: kingmatayo.thefirst@gmail.com
-date: 12/19/2024
+date: 12/22/2024
 
-title-block-banner: ./assets/hakeem.jpg
+title-block-banner: true
 title-block-banner-color: "black"
 
 format: html
@@ -46,73 +46,73 @@ source(file="./R/00-functions.R")
 
 ```
 
-# The Accidental Basketball Player
+# Basketball through the lens of behavioral science
 
-When Hakeem Olajuwon first stepped onto a basketball court, he was, by his own admission, clumsy. Born and raised in Lagos, Nigeria, Hakeem didn’t grow up idolizing Kareem Abdul-Jabbar or Wilt Chamberlain. Soccer was his first love, and footwork was its language. Pivoting to basketball as a teenager—almost by accident—he brought with him a foundation that would later transform him into one of the most graceful players the NBA has ever seen.
+Every shot in basketball is a gamble. A contested three-pointer, a drive to the basket, a no-look pass to the corner—all of it hinges on uncertainty. Success isn’t just about skill or effort; it’s about how players process risks and rewards under pressure. That’s where LeBron James stands out. He doesn’t just play basketball; he thinks basketball. His shot selection is a masterclass in decision-making, one that echoes a theory born not in gyms but in behavioral science labs.
 
-The thing about Hakeem is that he didn’t just learn the game. He mastered it. And not in the way most people imagine mastery looks like. His greatness wasn’t built on highlight dunks or flashy, viral moments. It was built on something quieter: the basics. Pivoting, positioning, and patience. Things that don’t scream for attention but demand respect when done well.
+Daniel Kahneman and Amos Tversky’s Prospect Theory revolutionized how we understand human choices. They showed that decisions aren’t made in a vacuum—they’re shaped by context, perception, and our innate biases about gains and losses. LeBron James, whether he knows it or not, embodies these principles every time he steps on the court. His decisions are a window into how we all navigate risk, uncertainty, and the pursuit of rewards.
 
-# The Dream Shake and the Illusion of Effortlessness
+# The anchor of context
 
-If you’ve ever watched a defender fall for Hakeem’s Dream Shake, you might think it was magic. A subtle fake one way, a quick pivot the other, and the defender was spinning like a top while Hakeem finished with a soft touch around the rim. It was beautiful to watch—and devastating to defend.
+Kahneman and Tversky argued that people evaluate outcomes relative to a reference point—a mental anchor that defines what counts as a win or a loss. For LeBron, the reference point shifts constantly.
 
-But what looked like magic wasn’t magic at all. It was work. Thousands of hours of work.
+In the first quarter of a game, his reference point is simple: efficiency. He takes high-percentage shots—like drives to the basket or open mid-range looks—not because they’re flashy but because they’re reliable. He’s setting the tone for himself and his team, ensuring a stable foundation.
 
-Placeholder for Analysis:
+*Placeholder Analysis: Provide data on LeBron’s shooting percentage by quarter. Highlight how his early-game shot selection tends toward high-percentage plays. Contrast this with shot selection in late-game scenarios when the stakes are higher.*
 
--   Post Play Efficiency: A breakdown of the success rate of the Dream Shake, highlighting how it performed under different conditions (regular season vs. playoffs, against elite defenders, etc.).
+But in the fourth quarter, with his team down by three and the clock ticking down, the reference point changes. Now it’s about survival. A contested three-pointer, which might have been a bad decision earlier, becomes the best option. Context redefines the math of risk and reward.
 
--   Comparative Metrics: How Olajuwon’s post-scoring efficiency stacks up against other all-time great big men, providing a data-driven lens on his dominance.
+*Placeholder Analysis: Examine LeBron’s clutch-time shooting percentages. Include data on contested vs. uncontested shots in the final two minutes of games, showing how his reference point adjusts to the situation.*
 
-Hakeem used to practice his footwork in solitude, moving through drills with the same intensity he brought to games. He treated every move like a puzzle piece, carefully crafted and meticulously placed. By the time defenders saw it, it was too late. They weren’t just guarding Hakeem; they were guarding the sum of years of focused effort.
+# The fear of losing
 
-We like to think genius is spontaneous, but more often, it’s the product of patience. Hakeem’s Dream Shake was a perfect example of this—an elegant reminder that mastery is often just the repetition of small things done extraordinarily well.
+Loss aversion is one of Prospect Theory’s most famous insights: losses hurt more than equivalent gains feel good. This bias explains why people hold onto bad stocks, avoid tough conversations, or refuse to take risks that might pay off big.
 
-# Defense: The Silent Dominance
+It also explains why LeBron sometimes passes up shots, even when fans think he should take them. Take Game 1 of the 2018 NBA Finals. With the game tied and seconds left, LeBron drove to the rim but didn’t shoot. Instead, he passed to George Hill, trusting Hill’s higher-probability free throw over his own contested layup.
 
-In the NBA, defense doesn’t sell tickets. People come for the dunks, the threes, the highlight-reel plays. But Hakeem understood something many didn’t: defense wins championships.
+*Placeholder Analysis: Breakdown LeBron’s assist-to-shot ratio in clutch situations, showing how often he prioritizes passing over shooting. Include data on teammates’ field goal percentages in those moments to explain the logic behind his choices.*
 
-He wasn’t the tallest center, but he was always the smartest. He blocked shots with precision, swatted away 3,830 attempts in his career, a feat no one has surpassed. He read passes like a chess master anticipating moves, accumulating steals at a rate unheard of for a big man.
+The reaction was instant and polarizing. Critics called him passive. But LeBron wasn’t avoiding responsibility; he was avoiding a costly mistake. A miss at the rim would’ve been catastrophic, while Hill’s free throws offered a safer path. It’s loss aversion in action: minimize regret, even if it means deferring to others.
 
-Placeholder for Analysis:
+# When risk becomes the right call
 
--   Defensive Metrics: Hakeem’s block rate, steal rate, and defensive win shares, contextualized with the era he played in and compared to other defensive legends.
+One of Prospect Theory’s subtler lessons is that people behave differently when they’re winning versus losing. When we’re ahead, we tend to play it safe. But when we’re behind, we start swinging for the fences.
 
--   Impact Analysis: How his presence in the paint altered opponents’ shot selections and efficiency, highlighting his broader influence on team defense.
+LeBron is no exception. When his team is ahead, he slows the pace, works the shot clock, and takes methodical, low-risk shots. But when his team is down, especially late in the game, he gets aggressive. Long three-pointers, daring drives, and even risky no-look passes become fair game. He’s not reckless; he’s adapting. The higher the stakes, the more he’s willing to gamble.
 
-Hakeem didn’t just play defense; he controlled the game without needing the ball. Opponents dreaded entering his domain because it wasn’t just about skill—it was about preparation. He studied his rivals like a lawyer studying a case file, learning their tendencies, their tricks, and their weaknesses. Every block and steal wasn’t just athleticism; it was evidence of a mental edge.
+*Placeholder Analysis: Compare LeBron’s shooting tendencies in games where his team is leading vs. trailing. Highlight the shift in shot location and shot type when his team is behind.*
 
-# Mastery Requires Focus
+This is the paradox of risk: sometimes, the safest choice is to embrace the riskier one. It’s why startups pivot, why investors double down, and why LeBron James, down by five, launches a deep three-pointer when the moment demands it.
 
-What separates someone who’s good from someone who’s great? It’s tempting to think it’s talent, but that’s only part of the story. The real gap between good and great is focus. And Hakeem’s focus was otherworldly.
+# The power of framing
 
-During Ramadan, when Hakeem fasted from sunrise to sunset, he played some of his best basketball. He would practice and play without food or water, yet he remained dominant. How? Because Hakeem’s game was never just physical. His discipline—both mental and spiritual—created a foundation that even exhaustion couldn’t break.
+Imagine this: the game is tied, five seconds left. Do you take a shot or pass the ball? The answer depends on how you frame the situation. Is it an opportunity to win or a chance to avoid losing? Prospect Theory says the frame changes everything.
 
-Placeholder for Analysis:
+LeBron understands this intuitively. His iconic game-winner against the Orlando Magic in 2009—a heavily contested three-pointer at the buzzer—wasn’t just a lucky shot. It was a calculated decision framed by the moment. Overtime wasn’t an option; the only path to victory was to take the risk. The frame—win or go home—justified the gamble.
 
--   Playoff Performances: Statistical review of his Finals MVP seasons and key playoff games, showcasing how his focus and preparation translated into dominance on the biggest stage.
+*Placeholder Analysis: Analyze LeBron’s game-winning shots over his career. Provide data on shot difficulty (e.g., defender distance, shot location) and the context (e.g., tied game, elimination game). Include visualizations comparing these shots to his regular-season attempts.*
 
--   Clutch Metrics: Hakeem’s performance under high-pressure situations, including points, rebounds, blocks, and shooting efficiency in late-game scenarios.
+# Confidence vs. Probability
 
-Most players approach the game like a sprint, chasing quick wins and flashy moments. Hakeem approached it like a marathon. Preparation was his secret weapon. While others relied on adrenaline, he relied on calm repetition. And when it mattered most—when championships were on the line—that focus became his superpower.
+LeBron is a physical marvel, but his confidence sometimes overrides probability. His step-back three-pointer, for instance, isn’t his most efficient shot, but he takes it often—especially when the moment calls for a hero. This reflects another Prospect Theory insight: we tend to overvalue low-probability outcomes, especially when the stakes are high.
 
-# The Lesson: Mastery is in the Margins
+*Placeholder Analysis: Examine LeBron’s success rate on step-back three-pointers compared to his overall three-point percentage. Include context, such as defender proximity or game clock.*
 
-Hakeem’s story isn’t about basketball. It’s about what happens when you commit to doing something exceptionally well.
+In basketball, as in life, confidence can distort how we view risk. The challenge isn’t suppressing confidence but balancing it with a clear-eyed view of reality. LeBron takes those shots because he believes in himself, but he also knows when to defer to a teammate with a better chance.
 
-He didn’t set out to be flashy. He set out to be effective. His greatest moves—the Dream Shake, the blocks, the steals—were born from mastering the fundamentals. And the irony of mastering the basics is that it doesn’t make you basic. It makes you extraordinary.
+# Lessons From the Court
 
-In life, as in basketball, the little things are the big things. Patience. Repetition. Focus. These are the tools of greatness, and they’re available to anyone willing to put in the time.
+LeBron James isn’t just a basketball player; he’s a case study in decision-making. His choices on the court—whether to shoot, pass, or drive—echo the principles of Prospect Theory in ways that make the abstract tangible.
 
-# The Legacy of The Dream
+Reference points shape decisions. Are you thinking about where you are, or where you want to be?
 
-Hakeem Olajuwon’s career is proof that the pursuit of mastery pays dividends far beyond what the world sees. He showed us that greatness isn’t loud; it’s consistent. It’s the person who works when no one is watching, who refines the unremarkable until it becomes unforgettable.
+-   Loss aversion drives behavior. How much of your day is spent avoiding mistakes instead of chasing opportunities?
 
-And maybe the most important thing Hakeem taught us is this: mastery isn’t about being the best. It’s about becoming the best version of yourself. The Dream didn’t just dominate basketball—he showed us all how to dream bigger.
+-   Risk-taking isn’t reckless. It’s context-dependent and often necessary for growth.
 
-Placeholder for Final Analysis:
+-   Framing changes everything. Reframing a problem can transform your approach to solving it.
 
--   Career Metrics Summary: Synthesis of Olajuwon’s achievements—blocks, steals, scoring efficiency, and championships—to quantify his all-time impact.
+LeBron’s greatness isn’t just in his physical talent; it’s in his mental game. He’s a living reminder that the best decisions aren’t always obvious. They’re the ones that balance risk and reward, anchored in context but willing to adapt. That’s not just basketball. That’s life.
 
 ------------------------------------------------------------------------
 
